# RPG-game-2D-SFML

./: .gitignore  CMakeLists.txt  CMakeLists_old.txt  README.md  main.cpp
Characters/: Archer.cpp  AttackTypes.cpp  AttackTypes.h  Character.cpp  Character.h  Mage.cpp  Warrior.cpp
Enemies/: BOSS.cpp  Enemy.cpp  Enemy.h  Eye.cpp  Goblin.cpp  Goblin.h  Mushroom.cpp  Skeleton.cpp
GUI/: GUI.cpp  GUI.h
NPC/: Beast.cpp  BuffTypes.cpp  BuffTypes.h  Hero.cpp  NPC.cpp  NPC.h  StrongKnight.cpp  StrongKnight.h
States/: ClassMenuState.cpp  ClassMenuState.h  FightState.cpp  FightState.h  GameState.cpp  GameState.h  IntroState.cpp  OutroState.cpp  OutroState.h  SettingsData.cpp  SettingsData.h  State.cpp  State.h
config/: settings.ini
headers/: Animate.h  EntityTypes.h  Game.h  GameMap.h  Player.h  Tile.h
include/: Game.h  Path.h  Player.h
include/Characters/: Archer.h  Character.h  Mage.h  Warrior.h
include/Enemies/: BOSS.h  Enemy.h  Eye.h  Mushroom.h  Skeleton.h
include/GUI/: GUI.h
include/NPC/: Beast.h  Hero.h  NPC.h
include/States/: ClassMenuState.h  FightState.h  GameState.h  IntroState.h  OutroState.h  SettingsData.h
src/: Animate.cpp  EntityTypes.cpp  Game.cpp  GameMap.cpp  Path.cpp  Player.cpp  Tile.cpp
src/Characters/: Archer.cpp  AttackTypes.cpp  Character.cpp  Mage.cpp  Warrior.cpp
src/Enemies/: BOSS.cpp  Enemy.cpp  Eye.cpp  Goblin.cpp  Mushroom.cpp  Skeleton.cpp
src/GUI/: GUI.cpp
src/NPC/: Beast.cpp  BuffTypes.cpp  Hero.cpp  NPC.cpp  StrongKnight.cpp
src/States/: ClassMenuState.cpp  FightState.cpp  GameState.cpp  IntroState.cpp  OutroState.cpp  SettingsData.cpp  State.cpp
unix_exe_file/: game
